tests/snapshots/integration__integration_tests__switch__switch_previous_branch.snap
---
source: tests/integration_tests/switch.rs
info:
  program: wt
  args:
    - switch
    - "-"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    HOME: "[TEST_HOME]"
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_BIN: ""
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
🟡 [33mWorktree for [1m[33mfeature-a[0m[33m at [1m[33m[REPO].feature-a[0m[33m; cannot cd (no shell integration)[0m
💡 [2mRun `wt config shell install` to enable automatic cd[0m
